chore: lib update changes related